# Interphore

./: '  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Todos-Bugs.md  build.yml  changes.txt  ld.exe.stackdump  shell.bat
.github/workflows/: build.yml
assets/font/bitmap/: Espresso-Dolce_22.fnt  Espresso-Dolce_30.fnt  Espresso-Dolce_38.fnt  OpenSans-Regular_20.fnt  dummy.bmfc
assets/img/test/: pixelSquare.spr
assets/img/ui/: main.spr  next.spr  pause.spr  title.spr
assets/img/ui/dialog/: basicDialog.spr  bleatDialog.spr  mintDialog.spr  paraDialog.spr  wendyDialog.spr
assets/img/writer/: exit.spr  kink.spr  restart.spr
assets/info/: baseJs.phore  originStory.txt
assets/info/info/: baseJs.phore
engine/: .gitignore  shell.bat
engine/buildSystem/: Licenses.txt  Makefile.common  app_profiler.config  asan.supp  compileAsset.bat  embuild.bat  embuildassets.bat  emscriptenTemplate.html  emsetup.bat  exportAssets.sh  flashExports.txt  flashTemplate.html  flashTemplateBlocked.html  flashTemplateSmall.html  multiDocsComboAnim.jsx  multiDocsSeparateAnims.jsx  singleDocSingleAnim.jsx  valgrindSuppress  winbuild.bat  winbuildLibs.bat  windbg.bat
engine/buildSystem/android-project/: .gitignore  settings.gradle
engine/buildSystem/android-project/app/: build.gradle
engine/buildSystem/android-project/app/src/main/cpp/: CMakeLists.txt  androidMain.cpp
engine/include/fmodIncludes/: fmod.cs
engine/include/jsiIncludes/: .depend  BUILD  Makefile  TODO  configure  jsi.c  jsi.h  jsiArray.c  jsiBool.c  jsiCData.c  jsiChar.c  jsiCmds.c  jsiCode.c  jsiCrypto.c  jsiDString.c  jsiEval.c  jsiFileCmds.c  jsiFilesys.c  jsiFormat.c  jsiFunc.c  jsiHash.c  jsiInt.h  jsiInterp.c  jsiJSON.c  jsiLexer.c  jsiLoad.c  jsiMarkdown.c  jsiMath.c  jsiMySql.c  jsiNumber.c  jsiObj.c  jsiOne.c  jsiOptions.c  jsiParser.y  jsiProto.c  jsiPstate.c  jsiRegexp.c  jsiSignal.c  jsiSocket.c  jsiSqlite.c  (+12 more)
engine/include/jsiIncludes/Configs/: make_default.conf  make_memdebug.conf  make_minimal.conf  make_musl.conf  make_release.conf  make_win.conf
engine/include/jsiIncludes/c-demos/: Makefile  cmds.c  dbdemo.c  simple.c
engine/include/jsiIncludes/js-demos/: fileSize.jsi  mysql.jsi  sockdemo.jsi  warndemo.jsi  warndemo2.jsi  wsdemo.html
engine/include/jsiIncludes/lib/: JsiCompat.jsi  Jsi_CData.jsi  Jsi_Csspp.jsi  Jsi_Debug.jsi  Jsi_Htmlpp.jsi  Jsi_Jspp.jsi  Jsi_Markdown.jsi  Jsi_Safe.jsi  Jsi_UnitTest.jsi  Jsi_Websrv.jsi  Jsi_Zip.jsi  Sys.jsi  autoload.jsi
engine/include/jsiIncludes/miniz/: miniz.c
engine/include/jsiIncludes/regex/: regex.h
engine/include/jsiIncludes/sqlite/: Makefile
engine/include/jsiIncludes/tests/: alias.jsi  apply.jsi  arg.jsi  arg2.jsi  arguments.jsi  array.jsi  array2.jsi  assert.jsi  badfunc.jsi  bind.jsi  brainfuck.jsi  call.jsi  class.jsi  construct.jsi  eval2.jsi  eval3.jsi  excpt2.jsi  exec.jsi  expr.jsi  ffi.jsi  file.jsi  file2.jsi  float.jsi  foreach.jsi  forin.jsi  format.jsi  func.jsi  in.jsi  info.jsi  inherit2.jsi  instance.jsi  interp.jsi  interp2.jsi  json.jsi  json2.jsi  local.jsi  logging.jsi  math.jsi  number.jsi  obj.jsi  (+25 more)
engine/include/jsiIncludes/tools/: configure.js  env.jsi  mkproto.jsi  mkref.jsi  mkstubs.jsi  mktoc.jsi  protos.jsi  randtest.jsi  structpp.jsi  syntaxjs.jsi
engine/include/jsiIncludes/websocket/: Makefile
engine/include/jsiIncludes/win/: compat.c  strptime.c
engine/include/jsiIncludes/www/: background.wiki  build.wiki  c-dbquery.wiki  home.wiki  (+15 more)
engine/lib/: TinyJS.h  TinyJS_MathFunctions.cpp  duk_config.h  duktape.h  miniz.c  mjs.c  stb_vorbis.c  tinyxml2.h
engine/lib/win32/: OpenAL32.lib  SDL2.lib  libcurl_imp.lib  libglew32.lib
engine/lib/win64/: OpenAL32.lib  SDL2d.lib  libcurl-d_imp.lib  libglew32d.lib
engine/src/: Console.as  Preloader.as  al_sound.cpp  androidPrintf.cpp  android_platform.cpp  arrayTools.cpp  arrayTools.h  asset.cpp  asset.h  asset.hpp  base64.cpp  base64.h  base64.hpp  byteArray.cpp  byteArray.h  curl_networking.cpp  defines.h  defines.hpp  em_networking.cpp  engine.cpp  engine.h  engine.hpp  flash_platform.cpp  flash_renderer.cpp  flash_sound.cpp  gameEngine.h  gameEngine.hpp  gl_renderer.cpp  glfw_platform.cpp  js.cpp  js.h  js.hpp  main.cpp  map.cpp  map.h  mathTools.cpp  mathTools.h  mathTools.hpp  matrix.cpp  matrix.h  (+55 more)
engine/src/tools/: assetBuilder.cpp
res/: assetList.txt  currentMod.phore  interphoreEarlyIndex.html  testMod.txt
sourceAssets/font/bitmap/: Espresso-Dolce_22.fnt  Espresso-Dolce_30.fnt  Espresso-Dolce_38.fnt  Espresso-Dolce_44.fnt  NunitoSans-Bold_22.fnt  NunitoSans-Bold_26.fnt  NunitoSans-Bold_30.fnt  NunitoSans-Bold_38.fnt  NunitoSans-Bold_44.fnt  NunitoSans-Italic_22.fnt  NunitoSans-Italic_26.fnt  NunitoSans-Italic_30.fnt  NunitoSans-Italic_38.fnt  NunitoSans-Light_22.fnt  NunitoSans-Light_26.fnt  NunitoSans-Light_30.fnt  NunitoSans-Light_38.fnt  OpenSans-Regular_20.fnt  OpenSans-Regular_30.fnt  OpenSans-Regular_35.fnt  OpenSans-Regular_40.fnt  dummy.bmfc
sourceAssets/info/: LLL.phore  LLLmap.phore  archiepelagoMap.phore  basic.phore  blackMansion.phore  cartPara.phore  chatsMap.phore  earthMap.phore  foodLand.phore  foodLandChrys.phore  foodlandMap.phore  hyenaFam.phore  interConfig.js  interStart.phore  introAllei.phore  introCart.phore  introMod.phore  introModMynt.phore  kitteryMaine.phore  lone.phore  loneDoors.phore  luluPouph.phore  magiDemo.phore  main.phore  mainMenu.phore  map.phore  mods.phore  mudPies.phore  myntHairbrush.phore  nodeGraph.phore  oldInterConfig.js  oliStream.phore  passageParser.js  redMary.phore  rpg.phore  scratch.phore  silverMod.phore  tempNymph.phore  tempPatch.phore  tempRox.phore  (+10 more)
sourceAssets/info/replay/: shield.rpl
sourceAssets/shader/: default.frag  particle.frag  particle.vert  renderTexture.frag  renderTexture.vert  tilemap.frag  tilemap.vert
src/: blackMansion.phore  debugOverlay.cpp  debugOverlay.hpp  game.cpp  game.hpp  main.cpp  textArea.cpp  textArea.hpp  unzipper.cpp  unzipper.hpp  writer.cpp  writer.h
src/writer/: backgrounds.cpp  desktop.cpp  graph.cpp  images.cpp  writer.cpp  writer.h
(+209 files in other folders)
